[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/bosses/scorprion_boss0.png" type="Texture" id=1]
[ext_resource path="res://enemies/bosses/Scorpion.gd" type="Script" id=2]
[ext_resource path="res://physics/HitEffect.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/bosses/scorprion_boss2.png" type="Texture" id=4]
[ext_resource path="res://enemies/bosses/Tail.gd" type="Script" id=5]
[ext_resource path="res://physics/Rocket.tscn" type="PackedScene" id=6]

[sub_resource type="CapsuleShape2D" id=1]
height = 40.0

[sub_resource type="CircleShape2D" id=2]

[node name="Scorpion" type="Area2D" groups=["enemies"]]
script = ExtResource( 2 )

[node name="Tail" type="Area2D" parent="."]
position = Vector2( 0, 23 )
script = ExtResource( 5 )

[node name="Rocket" parent="Tail" instance=ExtResource( 6 )]
position = Vector2( -9.09495e-13, -126 )
rotation = -3.14159
scale = Vector2( 10, 10 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Tail"]
polygon = PoolVector2Array( 27, -106, 27, -58, 2, -9, -2, -9, -27, -58, -27, -106 )

[node name="Sprite" type="Sprite" parent="Tail"]
texture = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -52 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Gun1" type="Position2D" parent="."]
position = Vector2( -110, 22 )

[node name="Gun2" type="Position2D" parent="."]
position = Vector2( 110, 21 )

[node name="Gun3" type="Position2D" parent="."]
position = Vector2( 0, -42 )

[node name="HitEffect1" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -48 )

[node name="HitEffect2" parent="." instance=ExtResource( 3 )]
position = Vector2( 116, 14 )

[node name="HitEffect3" parent="." instance=ExtResource( 3 )]
position = Vector2( -116, 14 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( -112, 18 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2( 112, 18 )
shape = SubResource( 2 )

[connection signal="area_entered" from="Tail" to="." method="_on_Tail_area_entered"]
